--- a/incubator/dd-manager/templates/deployment.yaml
+++ b/incubator/dd-manager/templates/deployment.yaml
@@ -27,6 +27,10 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
+      {{- if .Values.image.private }}
+      imagePullSecrets:
+        - name: {{ .Values.image.pullSecret }}    
+      {{- endif }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
