--- a/incubator/dd-manager/values.yaml
+++ b/incubator/dd-manager/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: quay.io/reactiveops/dd-manager
-  tag: dev-0.2.3
+  tag: "1.0.0"
   pullPolicy: IfNotPresent
 resources:
   limits:
